test con cosas corrrectas que deberia andar